# VM-auto-test

./: .env.example  .gitignore  API_INTERFACE.md  CLAUDE.md  README.md  credentials.json  pyproject.toml
.claude/skills/vm-auto-test/: SKILL.md
configs/: av.yaml  baseline.yaml  ignore_patterns.txt
plus_plan/: IMAGE_AGENT_PLAN.md
scripts/av_logs/: export_360.py  export_huorong.py  export_tencent.py
src/vm_auto_test/: __init__.py  ai_check_config.py  analysis.py  av_detection.py  av_logs.py  cli.py  config.py  env.py  evaluator.py  models.py  orchestrator.py  popup_classifier.py  reporting.py  smoke.py
src/vm_auto_test/av_exporters/: common.py  presets.py
src/vm_auto_test/commands/: __init__.py  ai_check.py  batch.py  config.py  doctor.py  inventory.py  output.py  report.py
src/vm_auto_test/providers/: __init__.py  base.py  factory.py  vmrun_provider.py
src/vmware_mcp/: __init__.py  client.py  server.py  vmcli.py  vmrun.py
tests/: conftest.py  test_ai_check.py  test_av_logs.py  test_cli.py  test_config.py  test_env.py  test_evaluator.py  test_orchestrator.py  test_orchestrator_batch.py  test_popup_classifier.py  test_popup_integration.py  test_provider_factory.py  test_reporting.py  test_smoke.py  test_vmrun.py
