[project]
name = "vm-auto-test"
version = "0.1.0"
description = "VMware lab automation for sample validation and AV blocking checks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "anthropic>=0.39.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vmware-mcp = "vmware_mcp.server:main"
vm-auto-test = "vm_auto_test.cli:main"
vm-auto-test-smoke = "vm_auto_test.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
